# FlameEdgeApp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flameedgeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flameedgeapp/: Camera2Helper.kt  GLView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/flameedgeapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
